remove oom related value